# k1_control

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  changelog
Linux/: CMakeLists.txt  CMakeLists_single_main.txt  main.cpp  main2.cpp  test.cpp  turn_cloth_demo.cpp
Linux/c&c++/inc_of_c++/: JAKAZuRobot.h
example/c++/: 23.multi_movj.cpp  25.kine.cpp  30.edgservo.cpp
examples/: 100.test.cpp  30.edgservo.cpp  33.extaxis.cpp  40.error_and_clear.cpp  CMakeLists.txt
include/: JAKAZuRobot.h  jktypes.h
libs/linux_x86_64/: libjakaAPI_2_3_1_0.so.2.3.0.6  libjakaAPI_2_3_1_0.so.6
src/: main.cpp  main2.cpp  turn_circle.cpp  turn_cloth_demo.cpp
src/jaka_ros_driver/: CMakeLists.txt  package.xml
src/jaka_ros_driver/launch/: display.launch
src/jaka_ros_driver/model/k1/meshes/: k1_pgc_fix_v1.urdf  k1_pgc_fix_v1.xml
src/jaka_ros_driver/model/k1/urdf/: k1_pgc_fix_v1.urdf  k1_pgc_j4_limit.urdf
src/jaka_ros_driver/rviz/: display_robot.rviz
src/jaka_ros_driver/scripts/: planing_trajectory.py  planing_trajectory_grasp.py  test.py  test_publish_joint_state.py  traj_ik_mujoco_ros_timer_standalone_onetime.py  traj_ik_ros_timer copy.py  traj_ik_ros_timer.py
src/jaka_ros_driver/scripts/DualGripper/: dh_device.py  dh_modbus_gripper.py  ros_gripper.py  ros_gripper_dual.py  ros_gripper_publisher.py
src/jaka_ros_driver/scripts/GripperTestPython/: GripperTestPython.py  dh_device.py  dh_modbus_gripper.py  ros_gripper_dual.py  ros_gripper_publisher.py
src/jaka_ros_driver/scripts/model/K1/urdf/: k1_pgc_j4_limit.urdf
src/jaka_ros_driver/src/: arm_control_node.cpp  arm_control_node_ok.cpp  command_publisher_node.cpp  sub copy.cpp  sub.cpp  test_servoj.cpp  trajectory_control.cpp
src/k1_description/: CMakeLists.txt  convert_urdf_to_xml.py  k1_description.urdf  k1_urdf.xml  package.xml
src/k1_description/launch/: display.launch  gazebo.launch
src/k1_description/urdf/: k1_description.csv
src/k1_simulation/: MUJOCO_LOG.TXT  mujoco_basic_demo.py  planning_in_mujoco_with_gripper.py  test_fk_with_mujoco.py  traj_ik_mujoco.py
src/k1_simulation/model/K1/: k1.xml  k1_new.xml  k1_pgc_fix_v1.xml
src/k1_simulation/save_no_gripper/: test_ik_mujoco.py  test_ik_no_mujoco.py  traj_ik_mujoco.py
src/k1_simulation/test/: test_fk_1.py  test_manipualation.py
src/pgc50/: CMakeLists.txt  package.xml  urdf.rviz
src/pgc50/launch/: display.launch  gazebo.launch
src/pgc50/urdf/: pgc50.csv  pgc50.urdf
